update app now with datatables to show coverage

--- a/webapp/templates/index.template.html
+++ b/webapp/templates/index.template.html
@@ -5,6 +5,7 @@
   <script src="vendor/jquery-1.10.2.js"></script>
   <script src="vendor/bootstrap.min.js"></script>
   <script src="vendor/bootstrap-multiselect.js"></script>
+  <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.js"></script>
   <link rel="stylesheet" type="text/css" href="style/main.css" />
 </head>
 <body>
@@ -44,5 +45,7 @@
   <div id="output"></div></div>
   <script>{META}</script>
   <script>{JS}</script>
+  <script>$('#meta-data').dataTable();</script>
+
 </body>
 </html>
