--- a/webapp/templates/index.template.html
+++ b/webapp/templates/index.template.html
@@ -6,6 +6,7 @@
   <script src="vendor/bootstrap.min.js"></script>
   <script src="vendor/bootstrap-multiselect.js"></script>
   <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.js"></script>
+      <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.7/css/jquery.dataTables.css">
   <link rel="stylesheet" type="text/css" href="style/main.css" />
 </head>
 <body>
